--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en">
   <head>
-    <title>Webpack Starter Kit</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Overlook Hotel</title>
   </head>
   <body>
-    <h1>Webpack Starter Kit</h1>
-
-    <img src="./images/turing-logo.png" alt="turing logo" height="100px" width="100px">
-
-    <!-- Do not include the index.js or main.bundle.js file here - it is done automatically by the webpack server -->
+    <section class="login-page">
+      <form class="login-page__form" id="loginForm">
+        <label for="username">
+          <input type="text" name="userName" placeholder="Username" id="userNameInput" required>
+        </label>
+        <label for="password">
+          <input type="text" name="password" placeholder="Password" id="passwordInput" required>
+        </label>
+        <input type="submit" placeholder="Login" class="login-page__form__btn btn" id="loginBtn">
+      </form>
+    </section>
+    
   </body>
 </html>
