Display rooms booked book the DOM

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,8 @@
         <input type="submit" placeholder="Login" class="login-page__form__btn btn" id="loginBtn">
       </form>
     </section>
-    
+    <main class="main">
+      <div class="booked-rooms"id="bookedRooms"></div>
+    </main>
   </body>
 </html>
