Add total booking cost to the DOM

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,10 @@
     </section>
     <main class="main">
       <div class="booked-rooms"id="bookedRooms"></div>
+      <div class="hotel-points" >
+        <h1 class="hotel-points__Header">Your Points</h1>
+        <p id="pointsEarned"></p>
+      </div>
     </main>
   </body>
 </html>
