--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;700&display=swap" rel="stylesheet">
     <title>Overlook Hotel</title>
   </head>
   <body>
-    <section class="login-page">
+    <header class="header-main">
+
+    </header>
+    <section class="login-page" hidden>
       <form class="login-page__form" id="loginForm">
         <label for="username">
           <input type="text" name="userName" placeholder="Username" id="userNameInput" required>
