Add style for the header

--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;700&family=Shrikhand&display=swap"
+      rel="stylesheet">
     <title>Overlook Hotel</title>
   </head>
   <body>
-    <header class="header-main">
-
+    <header class="header">
+      <h1 class="header__title">
+        <span class="header__title--main">Overlook</span>
+        <span class="header__title--sub">Discover comfort</span>
+      </h1>
     </header>
     <section class="login-page" hidden>
       <form class="login-page__form" id="loginForm">
