Add styling to search bar

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,20 @@
     <title>Overlook Hotel</title>
   </head>
   <body>
+    <form class="search-bar">
+      <label for="date">
+        <input type="date" class="search-bar__input date">
+      </label>
+      <label for="room type" class="clear">
+        <input type="text" class="search-bar__input room-type" placeholder="Room Type">
+      </label>
+      <label for="bed size">
+        <input type="text" class="search-bar__input bed-size" placeholder="Bed Size">
+      </label>
+      <label for="amount of bed">
+        <input type="text" class="search-bar__input number-of-beds" placeholder="Number of Beds">
+      </label>
+    </form>
     <header class="header">
       <h1 class="header__title">
         <span class="header__title--main">Overlook</span>
