Add drop down options for filtering search

--- a/src/index.html
+++ b/src/index.html
@@ -11,18 +11,53 @@
   </head>
   <body>
     <form class="search-bar">
-      <label for="date">
-        <input type="date" class="search-bar__input date">
-      </label>
-      <label for="room type" class="clear">
-        <input type="text" class="search-bar__input room-type" placeholder="Room Type">
-      </label>
-      <label for="bed size">
-        <input type="text" class="search-bar__input bed-size" placeholder="Bed Size">
-      </label>
-      <label for="amount of bed">
-        <input type="text" class="search-bar__input number-of-beds" placeholder="Number of Beds">
-      </label>
+      <label for="date"></label>
+      <input type="date" class="search-bar__input date">
+
+      <div class="search-bar__input">
+        <h3 class="search-bar__input__header">
+          <span class="search-bar__input__header--main">Room Type</span>
+          <span class="search-bar__input__header--sub">Pick a Room Prefrence</span>
+        </h3>
+        <div class="drop-down-menu">
+          <input type="checkbox" class="search-bar__input--room" name ="single room">
+          <label for="single room">Single Room</label><br>
+          <input type="checkbox" class="search-bar__input--room" name="suite">
+          <label for="suite">Suite</label><br>
+          <input type="checkbox" class="search-bar__input--room" name="junior suite">
+          <label for="junior suite">Junior Suite</label><br>
+          <input type="checkbox" class="search-bar__input--room" name="suite">
+          <label for="resdential suite">Residential Suite</label>
+        </div>
+      </div>
+      <div class="search-bar__input">
+        <h3 class="search-bar__input__header">
+          <span class="search-bar__input__header--main">Bed Size</span>
+          <span class="search-bar__input__header--sub">Which size bed are you looking for?</span>
+        </h3>
+        <div class="drop-down-menu">
+          <input type="checkbox" class="search-bar__input--room" name="twin">
+          <label for="twin">Twin</label><br>
+          <input type="checkbox" class="search-bar__input--room" name="full">
+          <label for="full">Full</label><br>
+          <input type="checkbox" class="search-bar__input--room" name="queen">
+          <label for="queen">Queen</label><br>
+          <input type="checkbox" class="search-bar__input--room" name="king">
+          <label for="king">King</label>
+        </div>
+      </div>
+      <div class="search-bar__input">
+        <h3 class="search-bar__input__header">
+          <span class="search-bar__input__header--main">Beds</span>
+          <span class="search-bar__input__header--sub">How many would you like?</span>
+        </h3>
+        <div class="drop-down-menu">
+          <input type="checkbox" class="search-bar__input--room" name="1">
+          <label for="1">1 Bed</label><br>
+          <input type="checkbox" class="search-bar__input--room" name="2">
+          <label for="2">2 Beds</label><br>
+        </div>
+      </div>
     </form>
     <header class="header">
       <h1 class="header__title">
