Add search functionality to the search bar

--- a/src/index.html
+++ b/src/index.html
@@ -36,13 +36,13 @@
           <span class="search-bar__input__header--sub">Which size bed are you looking for?</span>
         </h3>
         <div class="drop-down-menu">
-          <input type="checkbox" class="search-bar__input--room bed-size" name="twin">
+          <input type="checkbox" class="search-bar__input--room bed-size" name="twin" value="twin">
           <label for="twin">Twin</label><br>
-          <input type="checkbox" class="search-bar__input--room bed-size" name="full">
+          <input type="checkbox" class="search-bar__input--room bed-size" name="full" value="full">
           <label for="full">Full</label><br>
-          <input type="checkbox" class="search-bar__input--room bed-size" name="queen">
+          <input type="checkbox" class="search-bar__input--room bed-size" name="queen" value="queen">
           <label for="queen">Queen</label><br>
-          <input type="checkbox" class="search-bar__input--room bed-size" name="king">
+          <input type="checkbox" class="search-bar__input--room bed-size" name="king" value="king">
           <label for="king">King</label>
         </div>
       </div>
@@ -52,9 +52,9 @@
           <span class="search-bar__input__header--sub">How many would you like?</span>
         </h3>
         <div class="drop-down-menu">
-          <input type="checkbox" class="search-bar__input--room amount-of-beds" name="1">
+          <input type="checkbox" class="search-bar__input--room number-of-beds" name="1">
           <label for="1">1 Bed</label><br>
-          <input type="checkbox" class="search-bar__input--room amount-of-beds" name="2">
+          <input type="checkbox" class="search-bar__input--room number-of-beds" name="2">
           <label for="2">2 Beds</label><br>
         </div>
       </div>
