Remove console log from retrieveFormValues

--- a/src/index.html
+++ b/src/index.html
@@ -52,9 +52,9 @@
           <span class="search-bar__input__header--sub">How many would you like?</span>
         </h3>
         <div class="drop-down-menu">
-          <input type="checkbox" class="search-bar__input--room number-of-beds" name="1">
+          <input type="checkbox" class="search-bar__input--room number-of-beds" name="1" value="1">
           <label for="1">1 Bed</label><br>
-          <input type="checkbox" class="search-bar__input--room number-of-beds" name="2">
+          <input type="checkbox" class="search-bar__input--room number-of-beds" name="2" value="2">
           <label for="2">2 Beds</label><br>
         </div>
       </div>
