Add styles to previous bookings

--- a/src/index.html
+++ b/src/index.html
@@ -88,17 +88,16 @@
         </p>
         <img src="./images/joshua-tree.jpg" alt="The joshua tree landscape" class="hotel-points__img">
       </div>
-      <div class="booked-rooms"id="bookedRooms">
-        <section class="booked-room__card">
-          <img src="./images/room-1.jpg" alt="Hotel room with a bed and desk" class="booked-room__card__img">
-          <p class="booked-room__card__room-number">Room 16</p>
-          <p class="booked-room__card__date-booked">12/22/2020</p>
-          <p class="booked-room__card__type"> single room</p>
-          <p class="booked-room__card__bed-size">Bed Size Full</p>
-          <p class="booked-room__card__number-of-beds">Beds: 2</p>
-          <p class="booked-room__card__cost">$341</p>
-          <button class="booked-room__card__btn btn">I'm a button</button>
-        </section>
+      <div class="available-rooms"></div>
+      <div class="booked-rooms">
+        <h1 class="booked-room__header">
+          Previous Bookings
+        </h1>
+        <div class="booked-room__container" id="bookedRooms"></div>
+        <div class="booked-room__img__container">
+          <img src="./images/joshua-tree.jpg" alt="The joshua tree landscape" class="booked-room__img">
+        </div>
+        
       </div>
     </main>
   </body>
