Add sad path for searching for rooms in the past

--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,9 @@
     <title>Overlook Hotel</title>
   </head>
   <body>
-    <form class="search-bar hidden" id="searchForm">
+    <form class="search-bar" id="searchForm">
       <label for="date"></label>
-      <input type="date" class="search-bar__input date" value="">
+      <input type="date" class="search-bar__input date" value="" required>
       <div class="search-bar__input">
         <h3 class="search-bar__input__header">
           <span class="search-bar__input__header--main">Room Type</span>
@@ -96,8 +96,7 @@
         <div class="booked-room__container" id="bookedRooms"></div>
         <div class="booked-room__img__container">
           <img src="./images/joshua-tree.jpg" alt="The joshua tree landscape" class="booked-room__img">
-        </div>
-        
+        </div>     
       </div>
     </main>
   </body>
