Add primitive hotel room data to the dom for search results

--- a/src/index.html
+++ b/src/index.html
@@ -88,7 +88,7 @@
         </p>
         <img src="./images/joshua-tree.jpg" alt="The joshua tree landscape" class="hotel-points__img">
       </div>
-      <div class="available-rooms"></div>
+      <div class="available-rooms" id="availableRooms"></div>
       <div class="booked-rooms">
         <h1 class="booked-room__header">
           Previous Bookings
