--- a/src/index.html
+++ b/src/index.html
@@ -89,7 +89,7 @@
         <img src="./images/joshua-tree.jpg" alt="The joshua tree landscape" class="hotel-points__img">
       </div>
       <div class="available-rooms" id="availableRooms">
-        <section class="available-rooms__card">
+        <!-- <section class="available-rooms__card">
           <img src="./images/room-1.jpg" alt="Your next hotel room" class="available-rooms__card__img">
           <p class="available-rooms__card__room-number">Room 25</p>
           <p class="available-rooms__card__date">2021/03/10</p>
@@ -98,87 +98,7 @@
           <p class="available-rooms__card__number-of-beds">2</p>
           <p class="available-rooms__card__has-bidet">Has Bidet!</p>
           <button class="available-rooms__card__book-btn btn">Book Now</button>
-        </section>
-        <section class="available-rooms__card">
-          <img src="./images/room-1.jpg" alt="Your next hotel room" class="available-rooms__card__img">
-          <p class="available-rooms__card__room-number">25</p>
-          <p class="available-rooms__card__date">2021/03/10</p>
-          <p class="available-rooms__card__room-type">ResidentialSuite</p>
-          <p class="available-rooms__card__bed-size">Queen</p>
-          <p class="available-rooms__card__number-of-beds">2</p>
-          <p class="available-rooms__card__has-bidet">Has Bidet!</p>
-          <button class="available-rooms__card__book-btn btn"></button>
-        </section>
-        <section class="available-rooms__card">
-          <img src="./images/room-1.jpg" alt="Your next hotel room" class="available-rooms__card__img">
-          <p class="available-rooms__card__room-number">25</p>
-          <p class="available-rooms__card__date">2021/03/10</p>
-          <p class="available-rooms__card__room-type">ResidentialSuite</p>
-          <p class="available-rooms__card__bed-size">Queen</p>
-          <p class="available-rooms__card__number-of-beds">2</p>
-          <p class="available-rooms__card__has-bidet">Has Bidet!</p>
-          <button class="available-rooms__card__book-btn btn"></button>
-        </section>
-        <section class="available-rooms__card">
-          <img src="./images/room-1.jpg" alt="Your next hotel room" class="available-rooms__card__img">
-          <p class="available-rooms__card__room-number">25</p>
-          <p class="available-rooms__card__date">2021/03/10</p>
-          <p class="available-rooms__card__room-type">ResidentialSuite</p>
-          <p class="available-rooms__card__bed-size">Queen</p>
-          <p class="available-rooms__card__number-of-beds">2</p>
-          <p class="available-rooms__card__has-bidet">Has Bidet!</p>
-          <button class="available-rooms__card__book-btn btn"></button>
-        </section>
-        <section class="available-rooms__card">
-          <img src="./images/room-1.jpg" alt="Your next hotel room" class="available-rooms__card__img">
-          <p class="available-rooms__card__room-number">25</p>
-          <p class="available-rooms__card__date">2021/03/10</p>
-          <p class="available-rooms__card__room-type">ResidentialSuite</p>
-          <p class="available-rooms__card__bed-size">Queen</p>
-          <p class="available-rooms__card__number-of-beds">2</p>
-          <p class="available-rooms__card__has-bidet">Has Bidet!</p>
-          <button class="available-rooms__card__book-btn btn"></button>
-        </section>
-        <section class="available-rooms__card">
-          <img src="./images/room-1.jpg" alt="Your next hotel room" class="available-rooms__card__img">
-          <p class="available-rooms__card__room-number">25</p>
-          <p class="available-rooms__card__date">2021/03/10</p>
-          <p class="available-rooms__card__room-type">ResidentialSuite</p>
-          <p class="available-rooms__card__bed-size">Queen</p>
-          <p class="available-rooms__card__number-of-beds">2</p>
-          <p class="available-rooms__card__has-bidet">Has Bidet!</p>
-          <button class="available-rooms__card__book-btn btn"></button>
-        </section>
-        <section class="available-rooms__card">
-          <img src="./images/room-1.jpg" alt="Your next hotel room" class="available-rooms__card__img">
-          <p class="available-rooms__card__room-number">25</p>
-          <p class="available-rooms__card__date">2021/03/10</p>
-          <p class="available-rooms__card__room-type">ResidentialSuite</p>
-          <p class="available-rooms__card__bed-size">Queen</p>
-          <p class="available-rooms__card__number-of-beds">2</p>
-          <p class="available-rooms__card__has-bidet">Has Bidet!</p>
-          <button class="available-rooms__card__book-btn btn"></button>
-        </section>
-        <section class="available-rooms__card">
-          <img src="./images/room-1.jpg" alt="Your next hotel room" class="available-rooms__card__img">
-          <p class="available-rooms__card__room-number">25</p>
-          <p class="available-rooms__card__date">2021/03/10</p>
-          <p class="available-rooms__card__room-type">ResidentialSuite</p>
-          <p class="available-rooms__card__bed-size">Queen</p>
-          <p class="available-rooms__card__number-of-beds">2</p>
-          <p class="available-rooms__card__has-bidet">Has Bidet!</p>
-          <button class="available-rooms__card__book-btn btn"></button>
-        </section>
-        <section class="available-rooms__card">
-          <img src="./images/room-1.jpg" alt="Your next hotel room" class="available-rooms__card__img">
-          <p class="available-rooms__card__room-number">25</p>
-          <p class="available-rooms__card__date">2021/03/10</p>
-          <p class="available-rooms__card__room-type">ResidentialSuite</p>
-          <p class="available-rooms__card__bed-size">Queen</p>
-          <p class="available-rooms__card__number-of-beds">2</p>
-          <p class="available-rooms__card__has-bidet">Has Bidet!</p>
-          <button class="available-rooms__card__book-btn btn"></button>
-        </section>
+        </section> -->
       </div>
       <div class="booked-rooms">
         <h1 class="booked-room__header">
