--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <title>Overlook Hotel</title>
   </head>
   <body>
-    <form class="search-bar hidden" id="searchForm">
+    <form class="search-bar" id="searchForm">
       <label for="date"></label>
       <input type="date" class="search-bar__input date" value="" required>
       <div class="search-bar__input">
