Add pictures, fix search bar display

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
           <span class="search-bar__input__header--main">Room Type</span>
           <span class="search-bar__input__header--sub">Pick a Room Preference</span>
         </h3>
-        <div class="drop-down-menu">
+        <div class="drop-down-menu" aria-hidden="true">
           <input type="checkbox" class="search-bar__input--room room-type" name ="single room" value="single room">
           <label for="single room">Single Room</label><br>
           <input type="checkbox" class="search-bar__input--room room-type" name="suite" value="suite">
@@ -35,7 +35,7 @@
           <span class="search-bar__input__header--main">Bed Size</span>
           <span class="search-bar__input__header--sub">Which size bed are you looking for?</span>
         </h3>
-        <div class="drop-down-menu">
+        <div class="drop-down-menu" aria-hidden="true">
           <input type="checkbox" class="search-bar__input--room bed-size" name="twin" value="twin">
           <label for="twin">Twin</label><br>
           <input type="checkbox" class="search-bar__input--room bed-size" name="full" value="full">
@@ -51,7 +51,7 @@
           <span class="search-bar__input__header--main">Beds</span>
           <span class="search-bar__input__header--sub">How many would you like?</span>
         </h3>
-        <div class="drop-down-menu">
+        <div class="drop-down-menu" aria-hidden="true">
           <input type="checkbox" class="search-bar__input--room number-of-beds" name="1" value="1">
           <label for="1">1 Bed</label><br>
           <input type="checkbox" class="search-bar__input--room number-of-beds" name="2" value="2">
