Fix drop down staying open issue

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <form class="search-bar" id="searchForm">
       <input type="date" class="search-bar__input date" id="dateInput" value="" required>
       <label for="dateInput" class="date-label">date</label>
-      <div class="search-bar__input">
+      <div class="search-bar__input clickable">
         <h3 class="search-bar__input__header">
           <span class="search-bar__input__header--main">Room Type</span>
           <span class="search-bar__input__header--sub">Pick a Room Preference</span>
@@ -30,12 +30,12 @@
           <label for="resdentialSuite">Residential Suite</label>
         </div>
       </div>
-      <div class="search-bar__input">
+      <div class="search-bar__input clickable">
         <h3 class="search-bar__input__header">
           <span class="search-bar__input__header--main">Bed Size</span>
           <span class="search-bar__input__header--sub">Which size bed are you looking for?</span>
         </h3>
-        <div class="drop-down-menu" aria-hidden="true">
+        <div class="drop-down-menu input" aria-hidden="true">
           <input type="checkbox" class="search-bar__input--room bed-size" name="twin" value="twin" id="twin">
           <label for="twin">Twin</label><br>
           <input type="checkbox" class="search-bar__input--room bed-size" name="full" value="full" id="full">
@@ -46,12 +46,12 @@
           <label for="king">King</label>
         </div>
       </div>
-      <div class="search-bar__input">
+      <div class="search-bar__input clickable">
         <h3 class="search-bar__input__header">
           <span class="search-bar__input__header--main">Beds</span>
           <span class="search-bar__input__header--sub">How many would you like?</span>
         </h3>
-        <div class="drop-down-menu" aria-hidden="true">
+        <div class="drop-down-menu input" aria-hidden="true">
           <input type="checkbox" class="search-bar__input--room number-of-beds" name="1" value="1" id="one">
           <label for="one">1 Bed</label><br>
           <input type="checkbox" class="search-bar__input--room number-of-beds" name="2" value="2" id="two">
