Add error message to login page

--- a/src/index.html
+++ b/src/index.html
@@ -81,6 +81,7 @@
           </label>
           <input type="submit" placeholder="Login" class="login-form__input login-page__form__btn btn" id="loginBtn">
         </form>
+        <h2 class="login-error-msg" id="errorMessage" aria-hidden="true">Wrong username or password<br>please try again</h2>
       </div>    
     </section>
     <main class="main main-page" aria-hidden="true">
