Add image to bookings section

--- a/src/index.html
+++ b/src/index.html
@@ -102,7 +102,7 @@
         </h1>
         <div class="booked-room__container" id="bookedRooms"></div>
         <div class="booked-room__img__container">
-          <img src="./images/joshua-tree.jpg" alt="The joshua tree landscape" class="booked-room__img">
+          <img src="./images/sunset.jpg" alt="A joshua tree in the sunset" class="booked-room__img">
         </div>     
       </div>
     </main>
