--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,10 @@
     <title>Overlook Hotel</title>
   </head>
   <body>
+    <div class="error" id="bookingErrorMessage" aria-hidden="true">
+      <button class="error__exit-btn btn" aria-label="Exit"></button>
+      <h2 class="error__message">Please enter a valid date</h2>
+    </div>
     <form class="search-bar main-page" id="searchForm" aria-hidden="true">
       <input type="date" class="search-bar__input date" id="dateInput" value="" required>
       <label for="dateInput" class="date-label">date</label>
