Close error message on exit button click

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="error" id="bookingErrorMessage" aria-hidden="true">
-      <button class="error__exit-btn btn" aria-label="Exit"></button>
+      <button class="exit-btn btn" aria-label="Exit"></button>
       <h2 class="error__message">Please enter a valid date</h2>
     </div>
     <form class="search-bar main-page" id="searchForm" aria-hidden="true">
