Fix date display, capitalize words on cards

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
       <div class="search-bar__input clickable">
         <h3 class="search-bar__input__header">
           <span class="search-bar__input__header--main">Bed Size</span>
-          <span class="search-bar__input__header--sub">Which size bed are you looking for?</span>
+          <span class="search-bar__input__header--sub">Pick a bed size</span>
         </h3>
         <div class="drop-down-menu input" aria-hidden="true">
           <input type="checkbox" class="search-bar__input--room bed-size" name="twin" value="twin" id="twin">
@@ -53,7 +53,7 @@
       <div class="search-bar__input clickable">
         <h3 class="search-bar__input__header">
           <span class="search-bar__input__header--main">Beds</span>
-          <span class="search-bar__input__header--sub">How many would you like?</span>
+          <span class="search-bar__input__header--sub">Beds per room</span>
         </h3>
         <div class="drop-down-menu input" aria-hidden="true">
           <input type="checkbox" class="search-bar__input--room number-of-beds" name="1" value="1" id="one">
