--- a/src/index.html
+++ b/src/index.html
@@ -88,7 +88,7 @@
         <h2 class="login-error-msg" id="errorMessage" aria-hidden="true">Wrong username or password<br>please try again</h2>
       </div>    
     </section>
-    <main class="main main-page" aria-hidden="true">
+    <main class="main main-page hidden" aria-hidden="true">
       <div class="hotel-points" >
         <div class="points-container">
           <h2 class="hotel-points__header">Your Points</h2>
