--- a/src/index.html
+++ b/src/index.html
@@ -11,19 +11,19 @@
   </head>
   <body>
     <div class="error" id="bookingErrorMessage" aria-hidden="true">
-      <button class="exit-btn btn" aria-label="Exit"></button>
+      <button class="exit-btn btn" aria-label="Exit" tabindex="0"></button>
       <h2 class="error__message">Please enter a valid date</h2>
     </div>
     <form class="search-bar main-page" id="searchForm" aria-hidden="true">
       <input type="date" class="search-bar__input date" id="dateInput" value="" required>
       <label for="dateInput" class="date-label">date</label>
-      <div class="search-bar__input clickable">
+      <div class="search-bar__input clickable" tabindex="0">
         <h3 class="search-bar__input__header">
           <span class="search-bar__input__header--main">Room Type</span>
           <span class="search-bar__input__header--sub">Pick a Room Preference</span>
         </h3>
-        <div class="drop-down-menu" aria-hidden="true">
-          <input type="checkbox" class="search-bar__input--room room-type" name ="single room" value="single room" id="singleRoom">
+        <div class="drop-down-menu"  aria-hidden="true">
+          <input type="checkbox"  class="search-bar__input--room room-type" name ="single room" value="single room" id="singleRoom">
           <label for="singleRoom">Single Room</label><br>
           <input type="checkbox" class="search-bar__input--room room-type" name="suite" value="suite" id="suite">
           <label for="suite">Suite</label><br>
@@ -34,7 +34,7 @@
           <label for="resdentialSuite">Residential Suite</label>
         </div>
       </div>
-      <div class="search-bar__input clickable">
+      <div class="search-bar__input clickable" tabindex="0">
         <h3 class="search-bar__input__header">
           <span class="search-bar__input__header--main">Bed Size</span>
           <span class="search-bar__input__header--sub">Pick a bed size</span>
@@ -50,7 +50,7 @@
           <label for="king">King</label>
         </div>
       </div>
-      <div class="search-bar__input clickable">
+      <div class="search-bar__input clickable" tabindex="0">
         <h3 class="search-bar__input__header">
           <span class="search-bar__input__header--main">Beds</span>
           <span class="search-bar__input__header--sub">Beds per room</span>
@@ -62,7 +62,7 @@
           <label for="two">2 Beds</label><br>
         </div>
       </div>
-      <button class="search-bar__btn btn" id="searchBtn" aria-label="search"></button>
+      <button class="search-bar__btn btn" id="searchBtn" aria-label="search" tabindex="0"></button>
     </form>
     <header class="header main-page" aria-hidden="true">
       <h1 class="header__title">
@@ -88,7 +88,7 @@
         <h2 class="login-error-msg" id="errorMessage" aria-hidden="true">Wrong username or password<br>please try again</h2>
       </div>    
     </section>
-    <main class="main main-page hidden" aria-hidden="true">
+    <main class="main main-page" aria-hidden="true">
       <div class="hotel-points" >
         <div class="points-container">
           <h2 class="hotel-points__header">Your Points</h2>
