Add mobile view for available room cards

--- a/src/index.html
+++ b/src/index.html
@@ -92,7 +92,7 @@
       <div class="hotel-points" >
         <div class="points-container">
           <h2 class="hotel-points__header">Your Points</h2>
-          <p class=hotel-points__points-earned id="pointsEarned"></p>
+          <p class="hotel-points__points-earned" id="pointsEarned"></p>
         </div>
         <p class="hotel-points__tag-line">
           Earn 1 point for every ten dollars spent.<br>Book now to continue earning.
