--- a/src/index.html
+++ b/src/index.html
@@ -91,6 +91,7 @@
     <main class="main main-page" aria-hidden="true">
       <div class="hotel-points" >
         <div class="points-container">
+          <h2 class="hotel-points__name" id="customerName"></h2>
           <h2 class="hotel-points__header">Your Points</h2>
           <p class="hotel-points__points-earned" id="pointsEarned"></p>
         </div>
