Add booking confirmation message

--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,9 @@
     <title>Overlook Hotel</title>
   </head>
   <body>
-    <div class="error" id="bookingErrorMessage" aria-hidden="true">
+    <div class="user-msg" id="userMessage" aria-hidden="true">
       <button class="exit-btn btn" aria-label="Exit" tabindex="0"></button>
-      <h2 class="error__message">Please enter a valid date</h2>
+      <h2 class="user-msg__header" id="message"></h2>
     </div>
     <form class="search-bar main-page" id="searchForm" aria-hidden="true">
       <input type="date" class="search-bar__input date" id="dateInput" value="" required>
