--- a/src/index.html
+++ b/src/index.html
@@ -103,7 +103,7 @@
       <div class="available-rooms" id="availableRooms"></div>
       <div class="booked-rooms">
         <h1 class="booked-room__header">
-          Previous Bookings
+          Your Bookings
         </h1>
         <div class="booked-room__container" id="bookedRooms"></div>
         <div class="booked-room__img__container">
