Minor edits for linter

--- a/src/index.html
+++ b/src/index.html
@@ -89,7 +89,7 @@
       </div>    
     </section>
     <main class="main main-page" aria-hidden="true">
-      <div class="hotel-points" >
+      <div class="hotel-points" tabindex="0">
         <div class="points-container">
           <h2 class="hotel-points__name" id="customerName"></h2>
           <h2 class="hotel-points__header">Your Points</h2>
