Add demo username/pass

--- a/src/index.html
+++ b/src/index.html
@@ -76,6 +76,7 @@
       </div>
       <div class="login-page__form-container">
         <h1 class="login-page__header">Welcome Back!<br>Please Login</h1>
+        <p>For demo<br> username: overlook16<br> password: overlook2021</p>
         <form class="login-page__form" id="loginForm">
           <label for="usernameNameInput">
             <input type="text" class="login-form__input" name="userName" placeholder="Username" id="userNameInput" required>
